--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13252,6 +13252,11 @@ input[type="button"].btn-block {
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+.badge:hover{
+
+  cursor:pointer
+  
+  }
 
 @media (prefers-reduced-motion: reduce) {
   .badge {
